# rktest_example

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_cmake_example.yaml
cmake/: CMakeLists.txt
cmake/src/: factorial.c  main.c
cmake/tests/: factorial_tests.c
cmake_example/: README.md
tests/: factorial_tests.c
